--- a/estilos.css
+++ b/estilos.css
@@ -3,5 +3,11 @@
     padding: 0;
 }
 body{
-    background-color: #c8f0ff
+    background-color: #F0F8FF;
+    font-family: sans-serif;
+    font-size: 1em;
+    color: #59429d;
+    margin-left: 36%;
+    margin-top: 2%;
+    justify-content: center;
 }
