--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,13 +1,16 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
 }
 body{
+    font-size: 100%;
     background-color: #F0F8FF;
     font-family: sans-serif;
-    font-size: 1em;
     color: #59429d;
     margin-left: 36%;
     margin-top: 2%;
-    justify-content:center;
+    align-items: center;
+    justify-content:space-around;
 }
