--- a/formularios/formularios.css
+++ b/formularios/formularios.css
@@ -86,9 +86,10 @@ fieldset .grupo .campo{
 
 .button2 {
     font-size: 1.2em;
+    background: #59429d;
     border: 0;
     margin-bottom: 1em;
-    color: #ffffff;
+    color: #FFFFFF;
     padding: 0.2em 0.6em;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
     text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
