--- a/style.css
+++ b/style.css
@@ -259,11 +259,72 @@ a:hover {
 
 .rodape {
     width: 100%;
-    height: 100px;
+    height: 180px;
     background-color: #60E1E0;
     font-weight: bold;
     display: flex;
     align-items: center;
     justify-content: center;
     color: #1E1E2A;
+}
+.relogio {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 200px;
+    width: 550px;
+    background: transparent;
+    border-radius: 3px;
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, .5);
+}
+.relogio div {
+    height: 170px;
+    width: 170px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    background: rgba(5, 5, 5, .9);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, .7);
+    border-radius: 7px;
+    letter-spacing: 3px;
+}
+.relogio span {
+    font-weight: bolder;
+    font-size: 60px;
+}
+.relogio span.tempo {
+    font-size: 10px;
+}
+
+.calendario {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 200px;
+    width: 550px;
+    background: transparent;
+    border-radius: 3px;
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, .5);
+}
+.calendario div {
+    height: 170px;
+    width: 170px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    background: rgba(5, 5, 5, .9);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, .7);
+    border-radius: 7px;
+    letter-spacing: 3px;
+}
+.calendario span {
+    font-weight: bolder;
+    font-size: 60px;
+}
+.calendario span.data {
+    font-size: 10px;
 }
